--- a/php5/php-fpm.conf
+++ b/php5/php-fpm.conf
@@ -11,6 +11,9 @@ access.log = /proc/self/fd/2
 user = www-data
 group = www-data
 
+listen.owner = www-data
+listen.group = www-data
+listen.mode = 0660
 listen = /run/php/php5-fpm.sock
 
 pm = dynamic
